Criando mais cadastros

--- a/apps/empresa/templates/empresa/empresa_form.html
+++ b/apps/empresa/templates/empresa/empresa_form.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
     <form method="post">
+
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Salvar</button>
+
+        {{ form|bootstrap }}
+        <br>
+        <button type="submit" class="btn btn-info">Salvar</button>
     </form>
 {% endblock %}
