--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -7,6 +7,8 @@
     </div>
     <div class="col">
      Olá {{ usuario.funcionario.nome }}
+      <a href="{% url 'funcionario_list' %}">Gerenciar funcionarios</a>
+      <a href="{% url 'list_departamentos' %}">Gerenciar departamentos</a>
     </div>
     <div class="col">
       <a href="{% url 'logout' %}">Logout</a>
