Continuação do projeto, criando classes como horas extras, filtrando por funcionario logado

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -9,6 +9,7 @@
      Olá {{ usuario.funcionario.nome }}
       <a href="{% url 'funcionario_list' %}">Gerenciar funcionarios</a>
       <a href="{% url 'list_departamentos' %}">Gerenciar departamentos</a>
+      <a href="{% url 'list_hora_extra' %}">Gerenciar banco de horas</a>
     </div>
     <div class="col">
       <a href="{% url 'logout' %}">Logout</a>
