--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -13,6 +13,9 @@
 </form>
 
 <br>
+<a href="{% url 'create_documento' object.id %}" class="btn btn-success">Adicionar documento</a>
+
+<br>
 
 {% for documento in object.documento_set.all %}
 
