Varias alterações em continuidade do curso

--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -11,4 +11,8 @@
         <br>
     {% endfor %}
     <a href="{% url 'create_funcionario'%}" class="btn btn-info"> Novo</a>
+
+<a href="{% url 'relatorio_funcionario_html'%}" class="btn btn-info">Relatório funcionários</a>
+
+
 {% endblock %}
