--- a/apps/registro_horas_extra/templates/registro_horas_extra/registrohorasextra_list.html
+++ b/apps/registro_horas_extra/templates/registro_horas_extra/registrohorasextra_list.html
@@ -14,5 +14,6 @@
     {% endif %}
 
     <a href="{% url 'create_hora_extra'%}" class="btn btn-info"> Novo</a>
+    <a href="{% url 'exportar_csv'%}" class="btn btn-info"> Exportar CSV</a>
 
 {% endblock %}
