--- a/templates/base.html
+++ b/templates/base.html
@@ -15,5 +15,8 @@
     <div class="container">
         {% block main %} {% endblock %}
     </div>
+
+{% block static %}
+{% endblock %}
 </body>
 </html>
