--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block menu %}
+{% endblock %}
+
 {% block main %}
     <form method="post">
         {% csrf_token %}
         {{ form|bootstrap }}
+        <br>
         <button type="submit" class="btn btn-info">Login</button>
 
     </form>
